# color_mixer

./: .gitignore  Cargo.toml  readme.md
.cargo/: config.toml
src/: color_mixer.rs  error.rs  main.rs
static/: index.html
