[package]
name = "color_mixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4.10.2"
actix-files = "0.6.6"
actix-cors = "0.7.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
rgb = { version = "0.8.50", features = ["serde"] }
hex = "0.4.3"
validator = { version = "0.20.0", features = ["derive"] }
validator_derive = "0.20.0"
chrono = { version = "0.4.40", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
lru = "0.13.0"
