[package]
name = "color_mixer"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Web framework - Axum is lightweight compared to Actix
axum = "0.8.3"
# For serving static files
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
# For async runtime
tokio = { version = "1.44.2", features = ["rt", "macros", "rt-multi-thread"] }
# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# Error handling
thiserror = "2.0.12"
# Color handling
rgb = { version = "0.8.50", features = ["serde"] }
hex = "0.4.3"
# Simple validation - replacing heavy validator with manual validation
# Time handling - using time instead of chrono (lighter)
time = { version = "0.3.41", features = ["serde"] }
# Minimal logging instead of tracing
log = "0.4.27"
env_logger = "0.11.8"
# Cache
lru = "0.13.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
