[package]
name = "color_mixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Web framework - using minimal features
axum = { version = "0.8.3", features = ["macros", "json", "tokio", "http1"] }
# Static file serving
tower-http = { version = "0.6.2", features = ["fs"] }
# Async runtime - minimal features
tokio = { version = "1.44.2", features = ["full", "rt-multi-thread"] }
# Serialization - minimal features
serde = { version = "1.0.219", features = ["derive"] }
# Error handling
thiserror = "2.0.12"
# Color handling - using minimal features
rgb = { version = "0.8.50", features = ["serde"] }
# Minimal logging
log = "0.4.21"
env_logger = "0.11.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
